--- a/lib/Catalyst/Manual/Tutorial/Appendices.pod
+++ b/lib/Catalyst/Manual/Tutorial/Appendices.pod
@@ -80,7 +80,7 @@ C<0>, to the last line, C<$>).
 
 =item * 
 
-"%$s/^    "
+"%s/^    "
 
 A shortcut for the previous item (C<%> specifies the entire file; so
 this removes four leading spaces from every line).
@@ -216,7 +216,7 @@ Open the C<myapp01_mysql.sql> in your editor and enter:
     DROP TABLE IF EXISTS book_authors;
     DROP TABLE IF EXISTS authors;
     CREATE TABLE books (
-           id          INT(11) PRIMARY KEY,
+           id          INT(11) PRIMARY KEY AUTO_INCREMENT,
            title       TEXT ,
            rating      INT(11)
     );
@@ -227,7 +227,7 @@ Open the C<myapp01_mysql.sql> in your editor and enter:
            PRIMARY KEY (book_id, author_id)
     );
     CREATE TABLE authors (
-           id          INT(11) PRIMARY KEY,
+           id          INT(11) PRIMARY KEY AUTO_INCREMENT,
            first_name  TEXT,
            last_name   TEXT
     );
