--- a/lib/Catalyst/Manual/Tutorial/Testing.pod
+++ b/lib/Catalyst/Manual/Tutorial/Testing.pod
@@ -57,12 +57,9 @@ ensure that your application is working correctly at the present time,
 but also provide automated regression testing as you upgrade various
 pieces of your application over time.
 
-B<TIP>: Note that all of the code for this part of the tutorial can be
-pulled from the Catalyst Subversion repository in one step with the
-following command:
-
-    svn co http://dev.catalyst.perl.org/repos/Catalyst/tags/examples/Tutorial/MyApp/5.7/Testing MyApp
-
+You can checkout the source code for this example from the catalyst
+subversion repository as per the instructions in
+L<Catalyst::Manual::Tutorial::Intro>
 
 =head1 RUNNING THE "CANNED" CATALYST TESTS
 
@@ -174,7 +171,7 @@ editor and enter the following:
     $_->get_ok("http://localhost/", "Check redirect of base URL") for $ua1, $ua2;
     # Use title_is() to check the contents of the <title>...</title> tags
     $_->title_is("Login", "Check for login title") for $ua1, $ua2;
-    # Use content_contains() to match on test in the html body
+    # Use content_contains() to match on text in the html body
     $_->content_contains("You need to log in to use this application",
         "Check we are NOT logged in") for $ua1, $ua2;
     
@@ -264,9 +261,9 @@ To run the new test script, use a command such as:
 
 or
 
-    $ DBIX_CLASS_STORAGE_DBI_DEBUG=0 CATALYST_DEBUG=0 prove --lib lib -v t/live_app01.t
+    $ DBIC_TRACE=0 CATALYST_DEBUG=0 prove --lib lib -v t/live_app01.t
 
-Experiment with the C<DBIX_CLASS_STORAGE_DBI_DEBUG>, C<CATALYST_DEBUG>
+Experiment with the C<DBIC_TRACE>, C<CATALYST_DEBUG>
 and C<-v> settings.  If you find that there are errors, use the
 techniques discussed in the "Catalyst Debugging" section (Part 6) to
 isolate and fix any problems.
@@ -274,7 +271,7 @@ isolate and fix any problems.
 If you want to run the test case under the Perl interactive debugger,
 try a command such as:
 
-    $ DBIX_CLASS_STORAGE_DBI_DEBUG=0 CATALYST_DEBUG=0 perl -d -Ilib t/live_app01.t
+    $ DBIC_TRACE=0 CATALYST_DEBUG=0 perl -d -Ilib t/live_app01.t
 
 Note that although this tutorial uses a single custom test case for
 simplicity, you may wish to break your tests into different files for
