--- a/TODO
+++ b/TODO
@@ -26,6 +26,35 @@ http://github.com/willert/catalyst-plugin-log4perl-simple/tree
 
 # REFACTORING
 
+##  PSGI
+
+###  Blockers
+
+  * Add some tests for Catalyst::Test::local_request
+  * Docs
+  * Test all the options work on all of the scripts
+  * Test (and fix if needed) Engine::Stomp and ::Wx
+  * Document how to use your own .psgi
+  * Document migration for setting engine in setup
+  * Document migration for setting engine in $ENV
+  * Document what to do if you're a Prefork person
+  * Test Catalyst::Engine::PSGI still works?
+
+###  Nice to have
+
+  * Do we need to do something else about middleware than let the user provide a .psgi?
+    What about the reverse proxy middleware
+  * Do we generate a .psgi by default?
+  * throw out Catalyst::Test's remote_request in favour of
+    Plack::Test::ExternalServer
+  * make sure we're running under a server that support psgi.streaming - maybe
+    just load the BufferedWrite middleware, although that might break things
+    relying on ->write doing an unbuffered write
+  * throw away the restarter and allow using the restarters Plack provides
+  * remove per-request state from the engine instance
+  * be smarter about how we use PSGI - not every response needs to be delayed
+    and streaming
+
 ##  The horrible hack for plugin setup - replacing it:
 
  * Have a look at the Devel::REPL BEFORE_PLUGIN stuff
